[package]
name = "evm-contract-exporter"
version = "0.1.0"
edition = "2024"
description = "Prometheus exporter that scrapes view/pure functions on EVM contracts via Multicall3 and exposes their return values as metrics."
license = "Apache-2.0"
repository = "https://github.com/apyx-labs/evm-contract-exporter"
readme = "README.md"

[[bin]]
name = "evm-contract-exporter"
path = "src/main.rs"

[lib]
name = "evm_contract_exporter"
path = "src/lib.rs"

[dependencies]
alloy = { version = "2", features = ["json-abi", "dyn-abi", "contract", "provider-http", "reqwest-rustls-tls", "rpc-types-eth", "sol-types"] }
alloy-primitives = "1"
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
humantime-serde = "1"
prometheus = "0.14"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
alloy = { version = "2", features = ["json-abi", "dyn-abi", "contract", "provider-http", "sol-types"] }
tempfile = "3"
tower = "0.5"

[lints.clippy]
unwrap_used = "deny"
